force-app/main/default/objects/ccrz__E_Invoice__c/ccrz__E_Invoice__c.object-meta.xml
<CustomObject>
    <description>Invoice main object.  The invoice represents object against which payments may be made.</description>
    <label>CC Invoice</label>
    <nameField>
        <displayFormat>I-{0000000000}</displayFormat>
        <label>CC Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Invoices</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>