force-app/main/default/objects/ccrz__E_Invoice__c/fields/ccrz__BillAddress__c.field-meta.xml
<CustomField>
    <fullName>ccrz__BillAddress__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Billing address for the invoice.</description>
    <label>Bill Address</label>
    <referenceTo>ccrz__E_ContactAddr__c</referenceTo>
    <relationshipLabel>CC Billing Invoices</relationshipLabel>
    <relationshipName>CCBillingInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>