force-app/main/default/objects/ccrz__E_Invoice__c/fields/ccrz__Comments__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Comments__c</fullName>
    <description>Invoice comments. Typically set at create time.</description>
    <label>Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>