force-app/main/default/objects/ccrz__E_Invoice__c/fields/ccrz__CurrencyCode__c.field-meta.xml
<CustomField>
    <fullName>ccrz__CurrencyCode__c</fullName>
    <description>B2B Commerce currency code.</description>
    <label>Currency Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>