force-app/main/default/objects/ccrz__E_Invoice__c/fields/ccrz__DateDue__c.field-meta.xml
<CustomField>
    <fullName>ccrz__DateDue__c</fullName>
    <description>The date the invoice is due.</description>
    <label>Date Due</label>
    <type>Date</type>
</CustomField>