force-app/main/default/objects/ccrz__E_Invoice__c/fields/ccrz__InvoiceId__c.field-meta.xml
<CustomField>
    <fullName>ccrz__InvoiceId__c</fullName>
    <description>Unique external identifier.</description>
    <externalId>true</externalId>
    <label>Invoice Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>