force-app/main/default/objects/ccrz__E_Invoice__c/fields/ccrz__PaidAmount__c.field-meta.xml
<CustomField>
    <fullName>ccrz__PaidAmount__c</fullName>
    <formula>ccrz__OriginalAmount__c - ccrz__RemainingAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>