force-app/main/default/objects/ccrz__E_Invoice__c/fields/ccrz__SoldTo__c.field-meta.xml
<CustomField>
    <fullName>ccrz__SoldTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Sold To Account to which this invoice applies.</description>
    <label>Sold To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>CC Invoices</relationshipLabel>
    <relationshipName>CCInvoices</relationshipName>
    <type>Lookup</type>
</CustomField>