force-app/main/default/objects/ccrz__E_Invoice__c/fields/ccrz__Status__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Status__c</fullName>
    <description>The current implementation defined status of the invoice. E.g. Open, Closed.</description>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>