force-app/main/default/objects/ccrz__E_Invoice__c/fields/ccrz__Terms__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Terms__c</fullName>
    <description>The payment terms of the invoice, e.g. Net 15.</description>
    <label>Terms</label>
    <length>255</length>
    <type>Text</type>
</CustomField>