force-app/main/default/objects/ccrz__E_Invoice__c/fields/ccrz__Type__c.field-meta.xml
<CustomField>
    <fullName>ccrz__Type__c</fullName>
    <description>E.g. Credit Note, Debit Note, etc.</description>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>